--- a/package.json
+++ b/package.json
@@ -44,43 +44,43 @@
     ]
   },
   "dependencies": {
-    "@angular/common": "^20.3.16",
-    "@angular/compiler": "^20.3.16",
-    "@angular/core": "^20.3.16",
-    "@angular/forms": "^20.3.16",
-    "@angular/platform-browser": "^20.3.16",
-    "@angular/platform-server": "^20.3.16",
-    "@angular/router": "^20.3.16",
-    "@angular/ssr": "^20.3.16",
+    "@angular/common": "^21.1.5",
+    "@angular/compiler": "^21.1.5",
+    "@angular/core": "^21.1.5",
+    "@angular/forms": "^21.1.5",
+    "@angular/platform-browser": "^21.1.5",
+    "@angular/platform-server": "^21.1.5",
+    "@angular/router": "^21.1.5",
+    "@angular/ssr": "^21.1.4",
     "express": "^5.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@angular-builders/jest": "20.0.0",
-    "@angular/build": "^20.3.16",
-    "@angular/cli": "^20.3.16",
-    "@angular/compiler-cli": "^20.3.16",
-    "@angular/platform-browser-dynamic": "^20.3.16",
+    "@angular-builders/jest": "^21.0.3",
+    "@angular/build": "^21.1.4",
+    "@angular/cli": "^21.1.4",
+    "@angular/compiler-cli": "^21.1.5",
+    "@angular/platform-browser-dynamic": "^21.1.5",
     "@commitlint/cli": "^20.4.1",
     "@commitlint/config-conventional": "^20.4.1",
     "@playwright/test": "^1.58.2",
     "@types/express": "^5.0.1",
-    "@types/jest": "^29.5.0",
-    "@types/node": "^20.17.19",
-    "angular-eslint": "21.0.1",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^25.3.0",
+    "angular-eslint": "^21.2.0",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.5",
     "husky": "^9.1.7",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "jest-preset-angular": "14.6.0",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
+    "jest-preset-angular": "^16.0.0",
     "license-checker": "^25.0.1",
     "lint-staged": "^16.2.7",
     "prettier": "^3.8.1",
     "typescript": "~5.9.2",
-    "typescript-eslint": "8.46.4"
+    "typescript-eslint": "^8.56.0"
   },
   "overrides": {
     "tar": "^7.5.9",
